fixed white space plus i added some pictures

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,9 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-
+html{
+  overflow-x: hidden;
+}
 body {
   background-color: #fff;
   color: #555;
@@ -13,10 +15,15 @@ body {
   font-size: 20px;
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
-
   margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100% !important;
 }
-
+.bo{
+  width: 100% !important;
+}
 /*****whole WRAPPER margin settins*******/
 
 /*****whole WRAPPER margin settins*******/
@@ -191,7 +198,7 @@ h3 {
 }
 
 .card {
- 
+
 }
 
 /*****maincontent headings like h1,h2,h3 Beginning *******/
