--- a/css/queries.css
+++ b/css/queries.css
@@ -4,7 +4,7 @@
     font-size: 10px;
   }
   .navbar-toggler {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.836);
   }
 }
 
@@ -12,6 +12,8 @@
 @media only screen and (max-width: 1023px) {
   .card-body {
     font-size: 10px !important;
+    
+    
   }
   .navbar-toggler {
     background-color: white;
@@ -43,6 +45,7 @@
 @media only screen and (max-width: 480px) {
   body {
     padding: 0px;
+      width: 100% !important;
   }
   .card-body {
     font-size: 10px;
